apps/servarr/qbittorrent/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: servarr
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/part-of: servarr-stack
  annotations:
    external-dns.alpha.kubernetes.io/hostname: qbittorrent.lan
    external-dns.alpha.kubernetes.io/target: "192.168.68.62"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qbittorrent.lan`)
      kind: Rule
      middlewares:
        - name: lan-allowlist
          namespace: kube-system
      services:
        - name: qbittorrent
          port: 9091
  tls:
    secretName: qbittorrent-lan-tls
