apps/servarr/qbittorrent/authorizationpolicy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: qbittorrent-allow-probes
  namespace: servarr
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: qbittorrent-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: kubelet-probes
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: qbittorrent-allow-clients
  namespace: servarr
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: qbittorrent-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: qbittorrent-clients
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: qbittorrent-allow-traefik
  namespace: servarr
  labels:
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/part-of: servarr-stack
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: qbittorrent-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: qbittorrent-traefik
